<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23A4B8"
    android:fitsSystemWindows="false"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/interact_button"
        style="@style/RoundButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/pause"
        app:cornerRadius="60dp"
        app:icon="@drawable/hand"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/interact_button_label"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interact_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/interact_button"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/interact_button"
        app:layout_constraintTop_toBottomOf="@+id/interact_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/special_button"
        style="@style/RoundButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/pause"
        app:cornerRadius="60dp"
        app:icon="@drawable/special_star"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/special_button_label"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/special_button"
        app:layout_constraintStart_toStartOf="@+id/special_button"
        app:layout_constraintTop_toBottomOf="@+id/special_button" />

    <TextView
        android:id="@+id/attack_button_label"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/attack_button"
        app:layout_constraintStart_toStartOf="@+id/attack_button"
        app:layout_constraintTop_toBottomOf="@+id/attack_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attack_button"
        style="@style/RoundButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/pause"
        app:cornerRadius="60dp"
        app:icon="@drawable/sword"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/controller_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="6dp"
        android:text="@string/activate_controller_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activate_button"
        style="@style/RoundButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/activate_controller"
        android:gravity="center_horizontal"
        app:icon="@drawable/bluetooth_searching_24"
        app:iconPadding="0dp"
        app:iconTint="@color/bluetooth"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/deactivate_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pause_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controller_status_text" />

    <TextView
        android:id="@+id/activate_button_label"
        style="@style/LabelText"
        android:text="@string/activate_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/activate_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/activate_button"
        app:layout_constraintTop_toBottomOf="@+id/activate_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deactivate_button"
        style="@style/RoundButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/deactivate_controller"
        android:gravity="center_horizontal"
        app:icon="@drawable/bluetooth_disabled_24"
        app:iconPadding="0dp"
        app:iconTint="@color/bluetooth"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activate_button"
        app:layout_constraintTop_toBottomOf="@+id/controller_status_text" />

    <TextView
        android:id="@+id/deactivate_button_label"
        style="@style/LabelText"
        android:text="@string/deactivate_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/deactivate_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/deactivate_button"
        app:layout_constraintTop_toBottomOf="@+id/deactivate_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screenshot_button"
        style="@style/RoundButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/screenshot_string"
        android:gravity="center_horizontal"
        app:cornerRadius="70dp"
        app:icon="@drawable/photo_camera_24"
        app:iconPadding="0dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/turning_state_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/step_count_text"
        app:layout_constraintTop_toBottomOf="@+id/step_count_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/screenshot_button_label"
        style="@style/LabelText"
        android:text="@string/screenshot_button_label_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_count_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause_button"
        style="@style/RoundButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/pause"
        app:cornerRadius="60dp"
        app:icon="@drawable/pause_24"
        app:iconSize="60dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pause_button_label"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button_label_string"
        app:layout_constraintEnd_toEndOf="@+id/pause_button"
        app:layout_constraintStart_toStartOf="@+id/pause_button"
        app:layout_constraintTop_toBottomOf="@+id/pause_button" />

    <TextView
        android:id="@+id/device_status_text"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/no_device_connected"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/controller_status_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/step_count_string"
        android:textSize="30sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/steps_24px"
        app:layout_constraintEnd_toStartOf="@+id/turning_state_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activate_button_label" />

    <TextView
        android:id="@+id/turning_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/turning_state_none"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/step_count_text"
        app:layout_constraintTop_toBottomOf="@+id/deactivate_button_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
